# firewall-manager

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
data/: io.github.yeager.FirewallManager.desktop  se.danielnylander.firewall-manager.desktop
locale/sv/LC_MESSAGES/: firewall-manager.mo
po/: firewall-manager.pot  sv.po
po/locale/sv/LC_MESSAGES/: firewall-manager.mo
src/firewall_manager/: __init__.py  __main__.py  app.py
