[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "firewall-manager"
version = "0.1.3"
description = "Firewall Manager — GTK4/Adwaita frontend for UFW"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "Daniel Nylander" }]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
firewall-manager = "firewall_manager.app:main"

[tool.setuptools.packages.find]
where = ["src"]
